# pokemon-ai

./: .gitignore  README.md  Stochastic Optimization and Meta.docx  check_deck.py  extract_legal_cards.py  generate_card_prompt.py  generate_cpp_card_prompt.py  pokemon-laws-of-physics.md  pytest.ini  the-constitution.md
cpp_engine/: ARCHITECTURE.md  CMakeLists.txt  README.md  REVIEW.md  build.bat
cpp_engine/bindings/: pybind_module.cpp
cpp_engine/cmake/: pokemon_engine_config.cmake.in
cpp_engine/include/: action.hpp  board.hpp  card_database.hpp  card_instance.hpp  engine.hpp  game_state.hpp  logic_registry.hpp  player_state.hpp  pokemon_engine.hpp  resolution_step.hpp  types.hpp  xray_logger.hpp  zone.hpp
cpp_engine/include/cards/: effect_builders.hpp  trainer_registry.hpp
cpp_engine/src/: card_database.cpp  console.cpp  engine.cpp  logic_registry.cpp  xray_logger.cpp
cpp_engine/src/cards/: effect_builders.cpp  trainer_registry.cpp
cpp_engine/src/cards/trainers/items/: buddy_buddy_poffin.cpp  nest_ball.cpp  night_stretcher.cpp  prime_catcher.cpp  rare_candy.cpp  super_rod.cpp  ultra_ball.cpp
cpp_engine/src/cards/trainers/stadiums/: area_zero_underdepths.cpp
cpp_engine/src/cards/trainers/supporters/: boss_orders.cpp  briar.cpp  dawn.cpp  iono.cpp
cpp_engine/tests/: test_effect_builders.cpp  test_main.cpp  test_trainers.cpp
prompts/: Area_Zero_Underdepths.txt  Boss's_Orders.txt  Briar.txt  Charizard_ex.txt  Dawn.txt  Dusclops.txt  Dusknoir.txt  Fan_Rotom.txt  Fezandipiti_ex.txt  Klefki.txt  Night_Stretcher.txt  Noctowl.txt  Pidgeot_ex.txt  Prime_Catcher.txt  Professor's_Research.txt  Super_Rod.txt  Terapagos_ex.txt  Ultra_Ball.txt
prompts/cpp/: Area_Zero_Underdepths.md  Boss's_Orders.md  Briar.md  Buddy-Buddy_Poffin.md  Dawn.md  Iono.md  Night_Stretcher.md  Prime_Catcher.md  Rare_Candy.md  Super_Rod.md  Ultra_Ball.md
src/: actions.py  engine.py  engine_cpp.py  fast_clone.py  game_setup.py  main.py  models.py  play_console.py
src/agents/: __init__.py  base.py  human.py  random_bot.py
src/ai/: __init__.py  benchmark_mcts.py  benchmark_parallel.py  encoder.py  mcts.py  model.py  parallel_self_play.py  play_mcts.py  self_play.py  state_encoder.py  train.py  verify_encoder.py  verify_mcts.py  verify_model.py  verify_neural_mcts.py  verify_self_play.py  verify_state.py
src/cards/: __init__.py  base.py  factory.py  logic_effects.py  logic_registry.py  registry.py  utils.py
src/cards/sets/: __init__.py  me1.py  me2.py  sv1.py  sv10.py  sv2.py  sv3.py  sv3pt5.py  sv4.py  sv4pt5.py  sv5.py  sv6.py  sv6pt5.py  sv7.py  sv8.py  sv8pt5.py  sv9.py  svp.py  zsv10pt5.py
src/decks/: charizard_ex.txt  chienpao_ex.txt  dragapult_pidgeot.txt  gardevoir_jellicent.txt  gholdengo.txt  screw_the_bot.txt
src/utils/: __init__.py  action_encoder.py  ai_helpers.py  audit_cards.py  audit_master.csv  audit_summary.txt  deck_import.py  xray.py
tests/: __init__.py  conftest.py  test_action_encoder.py  test_action_permutation_counts.py  test_advanced_mechanics.py  test_area_zero_stadium_leave.py  test_area_zero_underdepths.py  test_belief_system_comprehensive.py  test_briar.py  test_buddy_buddy_poffin_comprehensive.py  test_charizard_infernal_reign_comprehensive.py  test_critical_actions.py  test_damage_math.py  test_dawn.py  test_deck_search_cards.py  test_dusclops_cursed_blast.py  test_dusknoir_shadow_bind.py  test_effects_system.py  test_energy_and_attacks.py  test_engine_invariants.py  test_engine_rules.py  test_evolution_comprehensive.py  test_fan_rotom.py  test_hoothoot_insomnia.py  test_klefki.py  test_knowledge_layer.py  test_mechanics_proof.py  test_nest_ball_comprehensive.py  test_night_stretcher.py  test_noctowl.py  test_pidgeot_ex.py  test_pokemon_attacks.py  test_prime_catcher.py  test_rare_candy_comprehensive.py  test_rare_candy_validation.py  test_retreat_mechanics.py  test_search_deduplication_invariants.py  test_search_multiple_same_name.py  test_stack_mechanics.py  test_status_conditions.py  (+3 more)
